--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -8,7 +8,7 @@
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.teamgannon.trips.controller.MainPane">
     <VBox>
-        <MenuBar fx:id="menuBar" layoutX="2.0" minHeight="-Infinity" minWidth="-Infinity">
+        <MenuBar fx:id="menuBar" prefHeight="29">
             <Menu mnemonicParsing="false" text="General">
                 <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
                 <MenuItem mnemonicParsing="false" onAction="#plotRoutes" text="Plot Routes"/>
@@ -125,80 +125,66 @@
                           onAction="#checkUpdate" text="Check for update"/>
             </Menu>
         </MenuBar>
-
-        <VBox fx:id="vbox1" VBox.vgrow="ALWAYS">
-            <ToolBar fx:id="toolBar"
-                     VBox.vgrow="ALWAYS">
-                <Button fx:id="resetButton" mnemonicParsing="false"
-                        onAction="#resetView" text="Reset View"/>
-                <Separator/>
-                <ToggleButton fx:id="togglePolityBtn" mnemonicParsing="false"
-                              onAction="#togglePolities" text="Polities"/>
-                <Separator/>
-                <ToggleButton fx:id="toggleStarBtn" mnemonicParsing="false"
-                              onAction="#toggleStars" text="Stars"/>
-                <ToggleButton fx:id="toggleGridBtn" mnemonicParsing="false"
-                              onAction="#toggleGrid" text="Grid"/>
-                <ToggleButton fx:id="toggleLabelsBtn" mnemonicParsing="false"
-                              onAction="#toggleLabels" text="Labels"/>
-                <ToggleButton fx:id="toggleStemBtn" mnemonicParsing="false"
-                              onAction="#toggleGridExtensions"
-                              text="Extensions"/>
-                <ToggleButton fx:id="toggleScaleBtn" mnemonicParsing="false"
-                              onAction="#toggleScale" text="Scale"/>
-                <ToggleButton fx:id="toggleRoutesBtn" mnemonicParsing="false"
-                              onAction="#toggleRoutes" text="Routes"/>
-                <ToggleButton fx:id="toggleTransitsBtn" mnemonicParsing="false"
-                              onAction="#toggleTransitAction"
-                              text="Transits"/>
-                <Separator/>
-                <ToggleButton fx:id="toggleSettings" mnemonicParsing="false"
-                              onAction="#toggleSidePane" text="Side Pane"/>
-                <ToggleButton fx:id="toggleZoomInBtn" mnemonicParsing="false"
-                              onAction="#zoomIn" text="+"/>
-                <ToggleButton fx:id="toggleZoomOutBtn" mnemonicParsing="false"
-                              onAction="#zoomOut" text="-"/>
-                <Separator/>
-                <VBox alignment="CENTER">
-                    <Label text="Routing State:"/>
-                    <Label fx:id="routingStatus" text="Inactive" textFill="seagreen"/>
-                </VBox>
-                <Separator/>
-                <CheckBox fx:id="animationCheckbox" mnemonicParsing="false"
-                          onAction="#runAnimation" text="animate"/>
-            </ToolBar>
-        </VBox>
+        <ToolBar fx:id="toolBar" minHeight="40" prefHeight="40">
+            <Button fx:id="resetButton" mnemonicParsing="false"
+                    onAction="#resetView" text="Reset View"/>
+            <Separator/>
+            <ToggleButton fx:id="togglePolityBtn" mnemonicParsing="false"
+                          onAction="#togglePolities" text="Polities"/>
+            <Separator/>
+            <ToggleButton fx:id="toggleStarBtn" mnemonicParsing="false"
+                          onAction="#toggleStars" text="Stars"/>
+            <ToggleButton fx:id="toggleGridBtn" mnemonicParsing="false"
+                          onAction="#toggleGrid" text="Grid"/>
+            <ToggleButton fx:id="toggleLabelsBtn" mnemonicParsing="false"
+                          onAction="#toggleLabels" text="Labels"/>
+            <ToggleButton fx:id="toggleStemBtn" mnemonicParsing="false"
+                          onAction="#toggleGridExtensions" text="Extensions"/>
+            <ToggleButton fx:id="toggleScaleBtn" mnemonicParsing="false"
+                          onAction="#toggleScale" text="Scale"/>
+            <ToggleButton fx:id="toggleRoutesBtn" mnemonicParsing="false"
+                          onAction="#toggleRoutes" text="Routes"/>
+            <ToggleButton fx:id="toggleTransitsBtn" mnemonicParsing="false"
+                          onAction="#toggleTransitAction" text="Transits"/>
+            <Separator/>
+            <ToggleButton fx:id="toggleSettings" mnemonicParsing="false"
+                          onAction="#toggleSidePane" text="Side Pane"/>
+            <ToggleButton fx:id="toggleZoomInBtn" mnemonicParsing="false"
+                          onAction="#zoomIn" text="+"/>
+            <ToggleButton fx:id="toggleZoomOutBtn" mnemonicParsing="false"
+                          onAction="#zoomOut" text="-"/>
+            <Separator/>
+            <CheckBox fx:id="animationCheckbox" mnemonicParsing="false"
+                      onAction="#runAnimation" text="animate"/>
+        </ToolBar>
         <VBox>
             <SplitPane fx:id="mainSplitPane" dividerPositions="0.76">
-                <AnchorPane fx:id="anchorPane1">
+                <Pane fx:id="anchorPane1" minWidth="0">
                     <StackPane fx:id="leftDisplayPane"/>
-                </AnchorPane>
-                <AnchorPane fx:id="anchorPane2">
+                </Pane>
+                <Pane fx:id="anchorPane2" minWidth="0">
                     <VBox fx:id="settingsPane">
                         <Accordion fx:id="propertiesAccordion">
                             <panes>
                                 <TitledPane fx:id="datasetsPane"
+                                            minWidth="200" minHeight="200"
                                             text="DataSets Available">
                                 </TitledPane>
                                 <TitledPane fx:id="objectsViewPane"
+                                            minWidth="200" minHeight="200"
                                             text="Objects in View"/>
                                 <TitledPane fx:id="stellarObjectPane"
                                             text="Stellar Object Properties">
                                 </TitledPane>
                                 <TitledPane fx:id="routingPane"
+                                            minWidth="200" minHeight="200"
                                             text="Star Routing"/>
                             </panes>
                         </Accordion>
                     </VBox>
-                </AnchorPane>
+                </Pane>
             </SplitPane>
         </VBox>
-        <HBox fx:id="statusBar">
-            <Label fx:id="databaseStatus" text="No Database Loaded" textFill="#3333FF">
-                <font>
-                    <Font name="Arial" size="15.0"/>
-                </font>
-            </Label>
-        </HBox>
+        <HBox fx:id="statusBar" prefHeight="18" minHeight="18"/>
     </VBox>
 </Pane>
