--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -78,6 +78,9 @@
                           onAction="#loadMuliple" text="Import Multiple Datasets from Excel"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#exportDatabase" text="Export Database to Excel"/>
+                <SeparatorMenuItem/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#copyDatabase" text="Create a new Dataset from existing"/>
             </Menu>
             <Menu mnemonicParsing="false" text="Transits">
                 <MenuItem mnemonicParsing="false"
@@ -110,7 +113,9 @@
             </Menu>
             <Menu mnemonicParsing="false" text="Search">
                 <MenuItem mnemonicParsing="false"
-                          onAction="#findInView" text="Select star..."/>
+                          onAction="#findInView" text="Select star in view..."/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#findInDatabase" text="Find star(s) in database..."/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#runQuery" text="Show Query Dialog..."/>
             </Menu>
