--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -118,6 +118,8 @@
                           onAction="#findInDatabase" text="Find star(s) in database..."/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#runQuery" text="Show Query Dialog..."/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#advancedSearch" text="Show Advanced Query Dialog..."/>
             </Menu>
             <Menu mnemonicParsing="false" text="Reports">
                 <MenuItem mnemonicParsing="false"
