--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -68,11 +68,12 @@
                 <MenuItem mnemonicParsing="false"
                           onAction="#runQuery" text="Select stars from current dataset..."/>
                 <MenuItem mnemonicParsing="false"
+                          onAction="#plotStars" text="Plot Stars"/>
+                <SeparatorMenuItem/>
+                <MenuItem mnemonicParsing="false"
                           onAction="#loadDataSetManager" text="Import dataset from a file..."/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#viewEditStarData" text="View/Edit selected Star Data"/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#plotStars" text="Plot Stars"/>
                 <SeparatorMenuItem/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#exportDatabase" text="Export Database to Excel"/>
@@ -117,7 +118,7 @@
                 <MenuItem mnemonicParsing="false"
                           onAction="#findInDataset" text="Find star(s) in dataset..."/>
                 <MenuItem mnemonicParsing="false"
-                          onAction="#advancedSearch" text="Advanced Query..."/>
+                          onAction="#advancedSearch" text="Select stars using advanced search.."/>
             </Menu>
             <Menu mnemonicParsing="false" text="Reports">
                 <MenuItem mnemonicParsing="false"
