--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -103,8 +103,8 @@
                           onAction="#routeFinderInView" text="Route finder from A to B (in View)"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#routeFinderDataset" text="Route finder from A to B (Entire Dataset)"/>
-<!--                <MenuItem mnemonicParsing="false"-->
-<!--                          onAction="#routeFinderTree" text="Route finder from A to anywhere"/>-->
+                <!--                <MenuItem mnemonicParsing="false"-->
+                <!--                          onAction="#routeFinderTree" text="Route finder from A to anywhere"/>-->
                 <SeparatorMenuItem/>
                 <CheckMenuItem fx:id="toggleRoutesMenuitem"
                                mnemonicParsing="false"
@@ -138,23 +138,26 @@
             <Button fx:id="plotButton" mnemonicParsing="false"
                     onAction="#plotStars" text="Plot Stars"/>
             <Separator/>
-            <ToggleButton fx:id="togglePolityBtn" mnemonicParsing="false"
-                          onAction="#togglePolities" text="Polities"/>
+            <Label text="Toggle Display on/off  "/>
             <Separator/>
-            <ToggleButton fx:id="toggleStarBtn" mnemonicParsing="false"
-                          onAction="#toggleStars" text="Stars"/>
-            <ToggleButton fx:id="toggleGridBtn" mnemonicParsing="false"
-                          onAction="#toggleGrid" text="Grid"/>
-            <ToggleButton fx:id="toggleLabelsBtn" mnemonicParsing="false"
-                          onAction="#toggleLabels" text="Labels"/>
-            <ToggleButton fx:id="toggleStemBtn" mnemonicParsing="false"
-                          onAction="#toggleGridExtensions" text="Extensions"/>
-            <ToggleButton fx:id="toggleScaleBtn" mnemonicParsing="false"
-                          onAction="#toggleScale" text="Scale"/>
-            <ToggleButton fx:id="toggleRoutesBtn" mnemonicParsing="false"
+            <ToggleButton fx:id="toggleLabelsBtn" mnemonicParsing="false" textFill="dodgerblue"
+                          onAction="#toggleLabels" text="Star Labels"/>
+            <ToggleButton fx:id="togglePolityBtn" mnemonicParsing="false" textFill="dodgerblue"
+                          onAction="#togglePolities" text="Star Polities"/>
+            <ToggleButton fx:id="toggleRoutesBtn" mnemonicParsing="false" textFill="dodgerblue"
                           onAction="#toggleRoutes" text="Routes"/>
-            <ToggleButton fx:id="toggleTransitsBtn" mnemonicParsing="false"
+            <ToggleButton fx:id="toggleTransitsBtn" mnemonicParsing="false" textFill="dodgerblue"
                           onAction="#toggleTransitAction" text="Transits"/>
+            <Separator/>
+            <ToggleButton fx:id="toggleStarBtn" mnemonicParsing="false" textFill="blueviolet"
+                          onAction="#toggleStars" text="Stars"/>
+            <ToggleButton fx:id="toggleGridBtn" mnemonicParsing="false" textFill="blueviolet"
+                          onAction="#toggleGrid" text="Grid"/>
+            <ToggleButton fx:id="toggleStemBtn" mnemonicParsing="false" textFill="blueviolet"
+                          onAction="#toggleGridExtensions" text="Extensions"/>
+            <ToggleButton fx:id="toggleScaleBtn" mnemonicParsing="false" textFill="blueviolet"
+                          onAction="#toggleScale" text="Scale"/>
+
             <Separator/>
             <ToggleButton fx:id="toggleSettings" mnemonicParsing="false"
                           onAction="#toggleSidePane" text="Side Pane"/>
@@ -162,9 +165,6 @@
                           onAction="#zoomIn" text="+"/>
             <ToggleButton fx:id="toggleZoomOutBtn" mnemonicParsing="false"
                           onAction="#zoomOut" text="-"/>
-            <Separator/>
-            <CheckBox fx:id="animationCheckbox" mnemonicParsing="false"
-                      onAction="#runAnimation" disable="true" text="animate"/>
         </ToolBar>
         <VBox fx:id="displayPane"/> <!-- all the magic happens here -->
         <HBox fx:id="statusBar" prefHeight="80" minHeight="80"/>
