--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -11,7 +11,6 @@
     <VBox>
         <MenuBar fx:id="menuBar" >
             <Menu mnemonicParsing="false" text="General">
-                <MenuItem mnemonicParsing="false" onAction="#rotate" text="Rotation Angles"/>
                 <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
                 <MenuItem mnemonicParsing="false" onAction="#plotRoutes" text="Plot Routes"/>
                 <MenuItem mnemonicParsing="false" onAction="#clearStars" text="Clear Stars"/>
@@ -121,6 +120,9 @@
             <Menu mnemonicParsing="false" text="Reports">
                 <MenuItem mnemonicParsing="false"
                           onAction="#distanceReport" text="Distance .."/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Expert (dev)">
+                <MenuItem mnemonicParsing="false" onAction="#rotate" text="Rotation Angles"/>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
                 <MenuItem mnemonicParsing="false"
